# rational-approx

./: .gitignore  .gitmodules  CMakeLists.txt  main.c  rational_approx.c
src/: rational_approx.h
test/: CMakeLists.txt  test_rational_approx.c
